# C-Schulung

./: .gitignore  CMakeLists.txt  README.md  main.c
first_day/: arrays.c  bedingungen.c  first.h  methoden.c  operatoren.c  schleifen.c  taylor_reihe.c
fourth_day/: fourth.h
second_day/: arrays.c  pointer.c  second.h
third_day/: data_types.c  linked_list.c  third.h
